tgthrProgramManagement/retrieved-metadata/extracted/unpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_casesafeid__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account casesafeid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Landlord__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the landlord currently active?</inlineHelpText>
        <label>Active Landlord</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confidential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confidential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Account_ID__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <inlineHelpText>A case-insensitive version of the Salesforce Account ID</inlineHelpText>
        <label>Full Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incomplete_SSN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incomplete SSN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Landlord_Property_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The person who manages this property</inlineHelpText>
        <label>Landlord/Property Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.IsPersonAccount</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Managed_Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NPSP_ID__c</fullName>
        <description>for data migration</description>
        <externalId>true</externalId>
        <label>NPSP ID</label>
        <length>22</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Number_of_Referrals_Last_365_Days__c</fullName>
        <description>Populated via DLRS. Counts number of Referral Records populated with this account created in last 365 days.</description>
        <inlineHelpText>Sum of Referral Records created in last 365 days linked to this Account.</inlineHelpText>
        <label>Number of Referrals Last 365 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Out_of_Unit__c</fullName>
        <label>Out of Unit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pets__c</fullName>
        <label>Pets</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Diagnosis__c</fullName>
        <label>Primary Diagnosis</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Profile_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Profile Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral Source</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Restriction_Alert__c</fullName>
        <description>Formula displaying recap of restrictions. Used conditionally on page layout.</description>
        <formula>IF ( INCLUDES (  Restrictions__pc  , &quot;Trespassed&quot; ), &quot;TRESPASSED; &quot;,null ) &amp;
IF ( INCLUDES (  Restrictions__pc  , &quot;Banned Drop In&quot; ), &quot;BANNED DROP IN; &quot;,null ) &amp;
IF ( INCLUDES (  Restrictions__pc  , &quot;Banned All Programs&quot; ), &quot;BANNED ALL PROGRAMS; &quot;,null ) &amp;
IF ( INCLUDES (  Restrictions__pc  , &quot;Banned Housing Programs&quot; ), &quot;BANNED HOUSING PROGRAMS; &quot;,null ) &amp;
IF ( INCLUDES (  Restrictions__pc  , &quot;INELIGIBLE&quot; ), &quot;Ineligible; &quot;,null ) &amp; 
BR() &amp;
&apos; Reasons: &apos; &amp;
( Restriction_Comments__pc) &amp;
BR() &amp;
&apos; Updated: &apos; &amp; TEXT( Restriction_Date__pc )</formula>
        <inlineHelpText>Recap of restrictions on the person.</inlineHelpText>
        <label>Restriction Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <externalId>true</externalId>
        <label>UUID</label>
        <length>52</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Victim_of_Domestic_Violence__c</fullName>
        <label>Victim of Domestic Violence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Doesn_t_Know_No_Answer</valueSetName>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AddParticipantsListView</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Mine</filterScope>
        <label>Add Participants View</label>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_Business_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Business_Account</value>
        </filters>
        <label>All Business Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_Person_Accounts</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.PersonAccount</value>
        </filters>
        <filters>
            <field>IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Person Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.PersonAccount</value>
        </filters>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>X1440_Participants</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>1440 Participants</label>
    </listViews>
    <recordTypes>
        <fullName>Admin_Hidden</fullName>
        <active>true</active>
        <label>Admin Hidden</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <description>Organization or business</description>
        <label>Business Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Industries_Person_Acc</fullName>
        <active>true</active>
        <description>DEPRECATED: Industries Person Account for Record Type</description>
        <label>zzz DEPRECATED Industries Person Acc</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Immutable_External_UUID</fullName>
        <active>true</active>
        <description>Once the external UUID has been set, does not allow it to be changed.</description>
        <errorConditionFormula>AND(
  NOT(ISNEW()),
  ISCHANGED(UUID__c)
)</errorConditionFormula>
        <errorDisplayField>UUID__c</errorDisplayField>
        <errorMessage>You may not edit this field once it has been set by the external process.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrictions_on_Person</fullName>
        <active>true</active>
        <description>If a restriction is added, update the date and comments field.</description>
        <errorConditionFormula>AND
(IsPersonAccount,
NOT(ISBLANK( Restrictions__pc )),

OR(ISBLANK( Restriction_Date__pc ) , 
ISBLANK( Restriction_Comments__pc))
)</errorConditionFormula>
        <errorMessage>If a restriction is added to a Person, then the Restriction Date and Comments field must also be updated.</errorMessage>
    </validationRules>
</CustomObject>